<resources>
    <string name="app_name">Take a date</string>
    <string name="action_settings">Settings</string>
    <string name="fa_envelope">&#xf0e0;</string>
    <string name="fa_street_view">&#xf21d;</string>
    <string name="fa_user">&#xf007;</string>
    <string name="fa_heart">&#xf004;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_gender">&#xf228;</string>
    <string name="fa_birthday_cake">&#xf1fd;</string>
    <string name="fa_mobile">&#xf10b;</string>
    <string name="fa_book">&#xf02d;</string>
    <string name="fa_male">&#xf183;</string>
    <string name="fa_tachometer">&#xf0e4;</string>
    <string name="fa_picture">&#xf03e;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="gcm_defaultSenderId">723994261050</string>
    <string name="google_app_id">YOUR_PROJECT_NUMBER</string>
</resources>
